# GRAFS-E

./: .gitignore  .gitlab-ci.yml  README.md  conf.py  model.lp  old_gitab.yml  pyproject.toml  requirements.txt  test_plot.py
.devcontainer/: devcontainer.json
.docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.docs/_build/html/.doctrees/: environment.pickle  index.doctree
.docs/_build/html/_sources/: index.rst.txt
.docs/_build/html/docs/source/: conf.html  grafs_e.html  modules.html  test_plot.html
docs/source/: 02-terms.md  C_layer.md  conf.py  grafs-e-engine.md  grafs-e-engine_V2.md  grafs-e-engine_v4.md  grafs-e_gui_user_guide.md  index.rst  input.md  output.md  overview.md  refs.bib  user-guide.md
docs/source/.docs/_build/html/: .buildinfo  conf.html  genindex.html  grafs_e.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  test_plot.html
docs/source/references/: api.rst  grafs_e.C_class.rst  grafs_e.N_class.rst  grafs_e.app.rst  grafs_e.rst  grafs_e.sankey.rst
example/: GRAFS_data.xlsx  GRAFS_data_example_C.xlsx  GRAFS_data_example_C_prospect.xlsx  GRAFS_data_example_N.xlsx  GRAFS_project_example.xlsx  GRAFS_project_example_C.xlsx  GRAFS_project_example_C_prospect.xlsx  GRAFS_project_example_N.xlsx  production france.xlsx  production france_csv.csv
src/: N_class.py
src/grafs_e/: C_class.py  N_class.py  app.py  contour-GRAFS.geojson  donnees.py  graphes_objet.py  launch.py  main.py  optim.py  propective.py  prospective.py  sankey.py  system_flows_svg.py  test_svg.py  test_typo.py  typology.py  unused_typo.py  visualisation.py
src/grafs_e/data/: FAOSTAT_data_fr_vege_import.csv  FAOSTAT_data_fr_viande_import.csv  GRAFS_data.xlsx  import_export.xlsx  projections_pop.xlsx  scenario.xlsx
src/grafs_e/data/scenario_region/Exponential/: Ain-Rhône.xlsx  Alpes.xlsx  Alsace.xlsx  Aveyron-Lozère.xlsx  Bourgogne.xlsx  Bretagne.xlsx  Calvados-Orne.xlsx  Cantal-Corrèze.xlsx  Champ-Ard-Yonne.xlsx  Côte d'Azur.xlsx  Dor-Lot.xlsx  Eure-et-Loir.xlsx  Eure.xlsx  France.xlsx  Gard-Hérault.xlsx  Garonne.xlsx  Gironde.xlsx  Grand Jura.xlsx  Grand Marseille.xlsx  Grande Lorraine.xlsx  Ile de France.xlsx  Isère-Drôme Ardèche.xlsx  Landes.xlsx  Loire Amont.xlsx  Loire Centrale.xlsx  Loire aval.xlsx  Manche.xlsx  Nord Pas de Calais.xlsx  Picardie.xlsx  Pyrénées Orient.xlsx  Pyrénées occid.xlsx  Savoie.xlsx  (+2 more)
(+108 files in other folders)
