[project]
name = "grafs-e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AdrienFausteGay", email = "adrien.gaypens.psl.eu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
grafs-e = "grafs_e:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
