[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafs-e"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.1",
    "build>=1.3.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pulp>=3.2.2",
    "ruff>=0.13.0",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "twine>=6.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff"
]

docs = [
  "sphinx>=7.3",
  "pydata-sphinx-theme>=0.15",
  "sphinx-design>=0.6",
  "myst-parser>=2.0",      # si tu as des pages Markdown
  "accessible-pygments",
  # libs dont tes snippets ont besoin :
  "numpy",
  "pandas",
  "matplotlib",
  "plotly",
  "pulp",
  "sphinx-autodoc-typehints>=2.1",
  "sphinx_copybutton",
  "sphinxcontrib.bibtex",
]

[tool.setuptools]
package-dir = {"" = "src"}              # <-- layout src

[tool.setuptools.packages.find]
where = ["src"]
include = ["grafs_e*"]

[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/_build"
# builder = "html"  # optionnel